force-app/main/default/objects/atl_Resource__c/atl_Resource__c.object-meta.xml
<CustomObject>
    <description>A task, template, guide, or training related to a phase, role, and/or technology.</description>
    <label>Atlas Resource</label>
    <nameField>
        <label>Atlas Resource Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Atlas Resources</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>