force-app/main/default/objects/atl_Resource__c/fields/atl_Advisory_Offering__c.field-meta.xml
<CustomField>
    <fullName>atl_Advisory_Offering__c</fullName>
    <label>Offering</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Q2C Assessment</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>