force-app/main/default/objects/atl_Resource__c/fields/atl_Advisory_Role__c.field-meta.xml
<CustomField>
    <fullName>atl_Advisory_Role__c</fullName>
    <label>Advisory Role</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>All</fullName>
                <label>All Roles</label>
            </value>
            <value>
                <fullName>Delivery Partner</fullName>
            </value>
            <value>
                <fullName>Practice Lead</fullName>
            </value>
            <value>
                <fullName>Sales Executive</fullName>
            </value>
            <value>
                <fullName>Solution Engineer</fullName>
            </value>
            <value>
                <fullName>Staffing</fullName>
            </value>
            <value>
                <fullName>Team Lead</fullName>
            </value>
            <value>
                <fullName>Project Manager</fullName>
            </value>
            <value>
                <fullName>Q2C Strategist</fullName>
            </value>
            <value>
                <fullName>Advisory Analyst</fullName>
            </value>
            <value>
                <fullName>Change Manager</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>