force-app/main/default/objects/atl_Resource__c/fields/atl_Advisory_Stage__c.field-meta.xml
<CustomField>
    <fullName>atl_Advisory_Stage__c</fullName>
    <inlineHelpText>If you edit this field, remember to edit Advisory Stage Display as well!</inlineHelpText>
    <label>Advisory Stage</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>All</fullName>
                <label>All Stages</label>
            </value>
            <value>
                <fullName>Stage0</fullName>
                <label>Stage 0: Sales</label>
            </value>
            <value>
                <fullName>Gate0</fullName>
                <label>Gate: Sale Qualified</label>
            </value>
            <value>
                <fullName>Stage1</fullName>
                <label>Stage 1: Scoping &amp; Project Initialization</label>
            </value>
            <value>
                <fullName>atl_Gate1_Advisory</fullName>
                <label>Gate: Discovery Plan Review</label>
            </value>
            <value>
                <fullName>atl_Stage2_Advisory</fullName>
                <label>Stage 2: Kickoff</label>
            </value>
            <value>
                <fullName>atl_Stage3_Advisory</fullName>
                <label>Stage 3: Discover</label>
            </value>
            <value>
                <fullName>atl_Gate3_Advisory</fullName>
                <label>Gate: Interim Readout Rehearsal</label>
            </value>
            <value>
                <fullName>atl_Stage4_Advisory</fullName>
                <label>Stage 4: Analyze</label>
            </value>
            <value>
                <fullName>atl_Gate4_Advisory</fullName>
                <label>Gate: Final Readout Rehearsal</label>
            </value>
            <value>
                <fullName>atl_Stage_5_Advisory</fullName>
                <label>Stage 5: Recommend</label>
            </value>
            <value>
                <fullName>Gate5</fullName>
                <label>Gate: Project Closure &amp; Next Phase Assessment</label>
            </value>
            <value>
                <fullName>atl_Stage6_Advisory</fullName>
                <label>Stage 6: Onboard Next Phase Resources</label>
            </value>
            <value>
                <fullName>Overlay1</fullName>
                <label>Scope, Timeline &amp; Budget Management</label>
            </value>
            <value>
                <fullName>atl_Gate2_Advisory</fullName>
                <isActive>false</isActive>
                <label>Gate: Plan Review</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>