force-app/main/default/objects/atl_Resource__c/fields/atl_AvailableForSearch__c.field-meta.xml
<CustomField>
    <fullName>atl_AvailableForSearch__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Available for Search</label>
    <type>Checkbox</type>
</CustomField>