force-app/main/default/objects/atl_Resource__c/fields/atl_Cognizant_Role__c.field-meta.xml
<CustomField>
    <fullName>atl_Cognizant_Role__c</fullName>
    <label>Cognizant Role</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>All</fullName>
                <label>All Roles</label>
            </value>
            <value>
                <fullName>Engagement Lead</fullName>
            </value>
            <value>
                <fullName>Portfolio Lead</fullName>
            </value>
            <value>
                <fullName>Delivery Excellence</fullName>
            </value>
            <value>
                <fullName>Product Owner</fullName>
            </value>
            <value>
                <fullName>Scrum Master</fullName>
            </value>
            <value>
                <fullName>Program Lead</fullName>
            </value>
            <value>
                <fullName>Senior Technology Architect</fullName>
            </value>
            <value>
                <fullName>Technology Architect</fullName>
            </value>
            <value>
                <fullName>Technical Lead</fullName>
            </value>
            <value>
                <fullName>Senior Developer</fullName>
            </value>
            <value>
                <fullName>Developer</fullName>
            </value>
            <value>
                <fullName>Test Lead</fullName>
            </value>
            <value>
                <fullName>Tester</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>