force-app/main/default/objects/atl_Resource__c/fields/atl_cognizant_stage__c.field-meta.xml
<CustomField>
    <fullName>atl_cognizant_stage__c</fullName>
    <inlineHelpText>If you edit this field, remember to edit Cognizant Stage Display as well!</inlineHelpText>
    <label>Cognizant Stage</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>All</fullName>
                <label>All Stages</label>
            </value>
            <value>
                <fullName>Stage0</fullName>
                <label>Stage 0: Sales</label>
            </value>
            <value>
                <fullName>Gate0</fullName>
                <label>Sale Qualified</label>
            </value>
            <value>
                <fullName>Stage1</fullName>
                <label>Stage 1: Scoping, Transition &amp; Project Initialization</label>
            </value>
            <value>
                <fullName>Gate1</fullName>
                <label>Sales To Delivery Handoff</label>
            </value>
            <value>
                <fullName>Stage2</fullName>
                <label>Stage 2: Project Kickoff &amp; High Level Design</label>
            </value>
            <value>
                <fullName>Gate2</fullName>
                <label>Project Success Confirmation</label>
            </value>
            <value>
                <fullName>Stage3</fullName>
                <label>Stage 3: Detailed Design &amp; Build</label>
            </value>
            <value>
                <fullName>Gate3</fullName>
                <label>Configuration &amp; UAT Test Plan Sign Off</label>
            </value>
            <value>
                <fullName>Stage4</fullName>
                <label>Stage 4: Solution Validation</label>
            </value>
            <value>
                <fullName>Gate4</fullName>
                <label>Go/No-Go</label>
            </value>
            <value>
                <fullName>Stage5</fullName>
                <label>Stage 5: Go Live</label>
            </value>
            <value>
                <fullName>Gate5</fullName>
                <label>Project Closure &amp; Next Phase Assessment</label>
            </value>
            <value>
                <fullName>Stage6</fullName>
                <label>Stage 6: Application Support</label>
            </value>
            <value>
                <fullName>Overlay1</fullName>
                <label>Scope, Timeline &amp; Budget Management</label>
            </value>
            <value>
                <fullName>Overlay2</fullName>
                <label>Data Migration &amp; Integration</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>