force-app/main/default/objects/atl_Resource__c/fields/atl_Cognizant_Technology__c.field-meta.xml
<CustomField>
    <fullName>atl_Cognizant_Technology__c</fullName>
    <label>Cognizant Technology</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Salesforce Industries (Vlocity)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>