force-app/main/default/objects/atl_Resource__c/fields/atl_ContainsMethodologyImage__c.field-meta.xml
<CustomField>
    <fullName>atl_ContainsMethodologyImage__c</fullName>
    <description>Indicate whether there is a methodology image referenced in this template/guide to be used to help expedite updates when the methodology image(s) are updated. Null = no methodology image</description>
    <inlineHelpText>Indicate whether there is a methodology image referenced in this template/guide to be used to help expedite updates when the methodology image(s) are updated. Null = no methodology image</inlineHelpText>
    <label>Contains Methodology Image?</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Implementation</fullName>
            </value>
            <value>
                <fullName>Advisory</fullName>
            </value>
            <value>
                <fullName>Data Migration</fullName>
            </value>
            <value>
                <fullName>Cognizant Implementation</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>