force-app/main/default/objects/atl_Resource__c/fields/atl_DisplayName__c.field-meta.xml
<CustomField>
    <fullName>atl_DisplayName__c</fullName>
    <label>Display Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>