force-app/main/default/objects/atl_Resource__c/fields/atl_DocType__c.field-meta.xml
<CustomField>
    <fullName>atl_DocType__c</fullName>
    <label>Doc Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>PDF</fullName>
            </value>
            <value>
                <fullName>PowerPoint</fullName>
            </value>
            <value>
                <fullName>Word Document</fullName>
            </value>
            <value>
                <fullName>Excel</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>