force-app/main/default/objects/atl_Resource__c/fields/atl_Link__c.field-meta.xml
<CustomField>
    <fullName>atl_Link__c</fullName>
    <label>Link</label>
    <length>255</length>
    <type>Text</type>
</CustomField>