force-app/main/default/objects/atl_Resource__c/fields/atl_owner__c.field-meta.xml
<CustomField>
    <fullName>atl_owner__c</fullName>
    <description>CoP that owns this activity/template/guide/training</description>
    <inlineHelpText>CoP that owns this activity/template/guide/training</inlineHelpText>
    <label>Owner</label>
    <required>true</required>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>All</fullName>
                <label>All Owners</label>
            </value>
            <value>
                <fullName>Advisory</fullName>
            </value>
            <value>
                <fullName>Application Support</fullName>
            </value>
            <value>
                <fullName>Architecture Team</fullName>
            </value>
            <value>
                <fullName>BACoP</fullName>
            </value>
            <value>
                <fullName>CLM CoP</fullName>
            </value>
            <value>
                <fullName>Cognizant Delivery</fullName>
            </value>
            <value>
                <fullName>Commerce CoP</fullName>
            </value>
            <value>
                <fullName>Conga CoP</fullName>
            </value>
            <value>
                <fullName>Data Engineering Team</fullName>
            </value>
            <value>
                <fullName>Delivery Partner</fullName>
            </value>
            <value>
                <fullName>Deployment Team</fullName>
            </value>
            <value>
                <fullName>DocuSign CoP</fullName>
            </value>
            <value>
                <fullName>Emerging Billing CoP</fullName>
            </value>
            <value>
                <fullName>gotransverse CoP</fullName>
            </value>
            <value>
                <fullName>ICon Leadership</fullName>
            </value>
            <value>
                <fullName>Integration CoP</fullName>
            </value>
            <value>
                <fullName>IP Team</fullName>
            </value>
            <value>
                <fullName>Legal Team</fullName>
            </value>
            <value>
                <fullName>Logik CoP</fullName>
            </value>
            <value>
                <fullName>Marketing</fullName>
            </value>
            <value>
                <fullName>NZC CoP</fullName>
            </value>
            <value>
                <fullName>Operations</fullName>
            </value>
            <value>
                <fullName>Partner Engagement</fullName>
            </value>
            <value>
                <fullName>PMCoP</fullName>
            </value>
            <value>
                <fullName>QACoP</fullName>
            </value>
            <value>
                <fullName>Sales Team</fullName>
            </value>
            <value>
                <fullName>Salesforce CoP</fullName>
            </value>
            <value>
                <fullName>Software Engineering Team</fullName>
            </value>
            <value>
                <fullName>Solution Engineering Team</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>