force-app/main/default/objects/atl_Resource__c/fields/atl_Project_Type__c.field-meta.xml
<CustomField>
    <fullName>atl_Project_Type__c</fullName>
    <label>Project Type</label>
    <required>true</required>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Advisory</fullName>
            </value>
            <value>
                <fullName>Delivery</fullName>
            </value>
            <value>
                <fullName>Cognizant</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>