force-app/main/default/objects/atl_Resource__c/fields/atl_ResourceType__c.field-meta.xml
<CustomField>
    <fullName>atl_ResourceType__c</fullName>
    <label>Resource Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Activity</fullName>
            </value>
            <value>
                <fullName>Template</fullName>
            </value>
            <value>
                <fullName>Guide</fullName>
            </value>
            <value>
                <fullName>Training</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>