force-app/main/default/objects/atl_Resource__c/fields/atl_Role__c.field-meta.xml
<CustomField>
    <fullName>atl_Role__c</fullName>
    <label>Role</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>All</fullName>
                <label>All Roles</label>
            </value>
            <value>
                <fullName>Application Support Specialist</fullName>
            </value>
            <value>
                <fullName>Business Analyst</fullName>
            </value>
            <value>
                <fullName>Data Engineer</fullName>
            </value>
            <value>
                <fullName>Delivery Partner</fullName>
            </value>
            <value>
                <fullName>Deployment Specialist</fullName>
            </value>
            <value>
                <fullName>Implementation Consultant</fullName>
            </value>
            <value>
                <fullName>Integration Engineer</fullName>
            </value>
            <value>
                <fullName>Practice Lead</fullName>
            </value>
            <value>
                <fullName>Project Manager</fullName>
            </value>
            <value>
                <fullName>Quality Assurance Analyst</fullName>
            </value>
            <value>
                <fullName>Sales Executive</fullName>
            </value>
            <value>
                <fullName>Software Engineer</fullName>
            </value>
            <value>
                <fullName>Solution Architect</fullName>
            </value>
            <value>
                <fullName>Solution Engineer</fullName>
            </value>
            <value>
                <fullName>Staffing</fullName>
            </value>
            <value>
                <fullName>Team Lead</fullName>
            </value>
            <value>
                <fullName>Client</fullName>
                <isActive>false</isActive>
                <label>Client</label>
            </value>
            <value>
                <fullName>Integration Engineer Lead</fullName>
                <isActive>false</isActive>
                <label>Integration Engineer Lead</label>
            </value>
            <value>
                <fullName>Production Success Specialist</fullName>
                <isActive>false</isActive>
                <label>Production Success Specialist</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>