force-app/main/default/objects/atl_Resource__c/fields/atl_SalesforceFileId__c.field-meta.xml
<CustomField>
    <fullName>atl_SalesforceFileId__c</fullName>
    <label>Salesforce File Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>