force-app/main/default/objects/atl_Resource__c/fields/atl_Sequence__c.field-meta.xml
<CustomField>
    <fullName>atl_Sequence__c</fullName>
    <description>Number field to allow for custom sorting of records. Smaller number appear first.</description>
    <inlineHelpText>Number field to allow for custom sorting of records. Smaller number appear first.</inlineHelpText>
    <label>Sequence</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>