force-app/main/default/objects/atl_Resource__c/fields/atl_StageAdvisoryDisplay__c.field-meta.xml
<CustomField>
    <fullName>atl_StageAdvisoryDisplay__c</fullName>
    <formula>IF(INCLUDES( atl_Advisory_Stage__c , &quot;Stage0&quot;), &quot;Sales&quot; + BR() , NULL) +
IF(INCLUDES( atl_Advisory_Stage__c , &quot;Gate0&quot;), &quot;Gate: Sale Qualified&quot; + BR(), NULL) +
IF(INCLUDES( atl_Advisory_Stage__c , &quot;Stage1&quot;), &quot;Stage 1: Scoping and Project Initialization&quot; + BR() , NULL) +
IF(INCLUDES( atl_Advisory_Stage__c , &quot;Gate1&quot;), &quot;Gate: Discovery Plan Review&quot; + BR() , NULL) +
IF(INCLUDES( atl_Advisory_Stage__c , &quot;atl_Stage2_Advisory&quot;), &quot;Stage 2: Kickoff&quot; + BR() , NULL) +
IF(INCLUDES( atl_Advisory_Stage__c , &quot;atl_Gate2_Advisory&quot;), &quot;Gate : Plan Review&quot; + BR() , NULL) +
IF(INCLUDES( atl_Advisory_Stage__c , &quot;atl_Stage3_Advisory&quot;), &quot;Stage 3: Discover&quot; + BR() , NULL) +
IF(INCLUDES( atl_Advisory_Stage__c , &quot;atl_Gate3_Advisory&quot;), &quot;Gate: Interim Readout Rehearsal&quot; + BR() , NULL) +
IF(INCLUDES( atl_Advisory_Stage__c , &quot;atl_Stage4_Advisory&quot;), &quot;Stage 4: Analyze&quot; + BR(), NULL) +
IF(INCLUDES( atl_Advisory_Stage__c , &quot;atl_Gate4_Advisory&quot;), &quot;Gate: Final Readout Rehearsal&quot; + BR() , NULL) +
IF(INCLUDES( atl_Advisory_Stage__c , &quot;atl_Stage_5_Advisory&quot;), &quot;Stage 5: Recommend&quot; + BR() , NULL) +
IF(INCLUDES( atl_Advisory_Stage__c , &quot;Gate5&quot;), &quot;Gate: Project Closure&quot; + BR() , NULL) +
IF(INCLUDES( atl_Advisory_Stage__c , &quot;atl_Stage6_Advisory&quot;), &quot;Stage 6: Onboard Next Phase Resources&quot; + BR(), NULL) +
IF(INCLUDES( atl_Advisory_Stage__c , &quot;Overlay1&quot;), &quot;Scope, Timeline &amp; Budget Management&quot; + BR() , NULL) +
IF(INCLUDES( atl_Advisory_Stage__c , &quot;Overlay2&quot;), &quot;Data Migration and Integration&quot; + BR() , NULL)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Stage Advisory Display</label>
    <type>Text</type>
</CustomField>