force-app/main/default/objects/atl_Resource__c/fields/atl_StageDisplay__c.field-meta.xml
<CustomField>
    <fullName>atl_StageDisplay__c</fullName>
    <formula>IF(INCLUDES( atl_Stage__c , &quot;Stage0&quot;), &quot;Sales&quot; + BR() , NULL) +
IF(INCLUDES( atl_Stage__c , &quot;Gate0&quot;), &quot;Sale Qualified&quot; + BR(), NULL) +
IF(INCLUDES( atl_Stage__c , &quot;Stage1&quot;), &quot;Stage 1: Scoping and Project Initialization&quot; + BR() , NULL) +
IF(INCLUDES( atl_Stage__c , &quot;Gate1&quot;), &quot;Sales To Delivery Handoff&quot; + BR() , NULL) +
IF(INCLUDES( atl_Stage__c , &quot;Stage2&quot;), &quot;Stage 2: Project Kickoff and High Level Design&quot; + BR() , NULL) +
IF(INCLUDES( atl_Stage__c , &quot;Gate2&quot;), &quot;Project Success Confirmation&quot; + BR() , NULL) +
IF(INCLUDES( atl_Stage__c , &quot;Stage3&quot;), &quot;Stage 3: Detailed Design and Build&quot; + BR() , NULL) +
IF(INCLUDES( atl_Stage__c , &quot;Gate3&quot;), &quot;Configuration and Test Plan Sign Off&quot; + BR() , NULL) +
IF(INCLUDES( atl_Stage__c , &quot;Stage4&quot;), &quot;Stage 4: Solution Validation&quot; + BR(), NULL) +
IF(INCLUDES( atl_Stage__c , &quot;Gate4&quot;), &quot;Go/No-Go&quot; + BR() , NULL) +
IF(INCLUDES( atl_Stage__c , &quot;Stage5&quot;), &quot;Stage 5: Go Live&quot; + BR() , NULL) +
IF(INCLUDES( atl_Stage__c , &quot;Gate5&quot;), &quot;Project Closure&quot; + BR() , NULL) +
IF(INCLUDES( atl_Stage__c , &quot;Stage6&quot;), &quot;Stage 6: Application Support&quot; + BR(), NULL) +
IF(INCLUDES( atl_Stage__c , &quot;Overlay1&quot;), &quot;Scope, Timeline &amp; Budget Management&quot; + BR() , NULL) +
IF(INCLUDES( atl_Stage__c , &quot;Overlay2&quot;), &quot;Data Migration and Integration&quot; + BR() , NULL)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Stage</label>
    <type>Text</type>
</CustomField>