force-app/main/default/objects/atl_Resource__c/fields/atl_Status__c.field-meta.xml
<CustomField>
    <fullName>atl_Status__c</fullName>
    <description>Template/Guide will either be Required/Optional or Archived. Activities &amp; Training don&apos;t use this field</description>
    <inlineHelpText>Template/Guide will either be Required/Optional or Archived. Activities &amp; Training don&apos;t use this field</inlineHelpText>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>All</fullName>
                <label>All Statuses</label>
            </value>
            <value>
                <fullName>Required</fullName>
            </value>
            <value>
                <fullName>Optional</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>