force-app/main/default/objects/atl_Resource__c/fields/atl_Technology__c.field-meta.xml
<CustomField>
    <fullName>atl_Technology__c</fullName>
    <label>Technology</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SFRevCloud</fullName>
                <label>CPQ/Billing - Salesforce Revenue Cloud</label>
            </value>
            <value>
                <fullName>Logik</fullName>
                <label>CPQ/Billing - Salesforce Revenue Cloud + Logik</label>
            </value>
            <value>
                <fullName>Xactly</fullName>
                <label>SPM - Xactly</label>
            </value>
            <value>
                <fullName>DocuSign</fullName>
                <label>CLM - DocuSign</label>
            </value>
            <value>
                <fullName>Conga</fullName>
                <label>CLM - Conga</label>
            </value>
            <value>
                <fullName>SFCommerce</fullName>
                <label>Commerce - Salesforce Commerce Cloud</label>
            </value>
            <value>
                <fullName>Gotransverse</fullName>
                <label>Billing - Gotransverse</label>
            </value>
            <value>
                <fullName>BillingPlatform</fullName>
                <label>Billing - BillingPlatform</label>
            </value>
            <value>
                <fullName>SFNZC</fullName>
                <label>CEA - Salesforce Net Zero Cloud</label>
            </value>
            <value>
                <fullName>Advisory</fullName>
                <isActive>false</isActive>
                <label>Advisory</label>
            </value>
            <value>
                <fullName>Vlocity / SF Industries</fullName>
                <isActive>false</isActive>
                <label>Vlocity / SF Industries</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>