force-app/main/default/objects/atl_Resource__c/fields/atl_TrainingType__c.field-meta.xml
<CustomField>
    <fullName>atl_TrainingType__c</fullName>
    <label>Training Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Generic Link</fullName>
            </value>
            <value>
                <fullName>myTrailhead</fullName>
            </value>
            <value>
                <fullName>Video</fullName>
            </value>
            <value>
                <fullName>Trailhead</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>