force-app/main/default/objects/atl_Resource__c/fields/Download__c.field-meta.xml
<CustomField>
    <fullName>Download__c</fullName>
    <formula>IF(TEXT(atl_ResourceType__c) = &quot;Activity&quot;,&quot;&quot;,IF(ISBLANK(atl_SalesforceFileId__c),atl_Link__c,($Label.atl_CommURL + &quot;sfc/servlet.shepherd/document/download/&quot; + atl_SalesforceFileId__c)))</formula>
    <label>Download</label>
    <type>Text</type>
</CustomField>