force-app/main/default/objects/atl_Resource__c/recordTypes/TemplateOrGuide.recordType-meta.xml
<RecordType>
    <fullName>TemplateOrGuide</fullName>
    <active>true</active>
    <label>Template or Guide</label>
</RecordType>