force-app/main/default/objects/atl_Resource__c/validationRules/All_X_Picklist_Value_Selected.validationRule-meta.xml
<ValidationRule>
    <fullName>All_X_Picklist_Value_Selected</fullName>
    <active>true</active>
    <errorConditionFormula>OR(INCLUDES(atl_Advisory_Role__c,&quot;All&quot;),INCLUDES(atl_Advisory_Stage__c,&quot;All&quot;),INCLUDES(atl_Cognizant_Role__c,&quot;All&quot;),INCLUDES(atl_cognizant_stage__c,&quot;All&quot;),INCLUDES(atl_owner__c,&quot;All&quot;),INCLUDES(atl_Role__c,&quot;All&quot;),INCLUDES(atl_Stage__c,&quot;All&quot;),ISPICKVAL(atl_Status__c,&quot;All&quot;))</errorConditionFormula>
    <errorMessage>Oops! Looks like you selected the &apos;All&apos; picklist value for one of the Stage, Role, Owner, or Status fields. Please select all of the individual options instead.</errorMessage>
</ValidationRule>