force-app/main/default/objects/atl_Resource__c/validationRules/SFFileID_and_Link_Both_Populated.validationRule-meta.xml
<ValidationRule>
    <fullName>SFFileID_and_Link_Both_Populated</fullName>
    <active>true</active>
    <errorConditionFormula>AND(atl_Link__c != null,atl_SalesforceFileId__c != null)</errorConditionFormula>
    <errorMessage>Oops! Looks like you&apos;ve added both a Link and a Salesforce File ID. Please make sure that only one is populated (and if you&apos;re going with Link, ensure you delete the related File in Salesforce).</errorMessage>
</ValidationRule>